# srbd-trajopt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  jac_test.cpp  main.cpp  main2.cpp  out.txt  plot.py  quad_trot_huge.csv  quad_trot_step.csv  traj_opt.hpp
ifopt_sets/: variables.hpp
ifopt_sets/constraints/: acceleration.hpp  dynamics.hpp  foot_constraints.hpp
include/ifopt_sets/: variables.hpp
include/ifopt_sets/constraints/: acceleration.hpp  dynamics.hpp  foot_constraints.hpp
include/ifopt_sets/constraints/body/: dynamics.hpp
include/ifopt_sets/constraints/common/: acceleration.hpp  dynamics.hpp  friction_cone.hpp
include/ifopt_sets/constraints/contact_implicit/: dynamics_implicit.hpp  foot_body_distance_implicit.hpp  foot_terrain_distance_implicit.hpp  friction_cone_implicit.hpp  implicit_contact.hpp  implicit_velocity.hpp
include/ifopt_sets/constraints/feet/: foot_body_distance.hpp  foot_terrain_distance.hpp  foot_terrain_distance_implicit.hpp  foot_terrain_distance_phased.hpp  friction_cone.hpp  implicit_contact.hpp  implicit_velocity.hpp
include/ifopt_sets/constraints/phased/: dynamics_phased.hpp  foot_body_distance_phased.hpp  foot_terrain_distance_phased.hpp  friction_cone_phased.hpp  phased_acceleration.hpp
include/ifopt_sets/cost/: min_effort.hpp
include/ifopt_sets/variables/: phased_trajectory_vars.hpp  trajectory_vars.hpp
include/robo_spline/: component.hpp  cubic_hermite_spline.hpp  phased_trajectory.hpp  trajectory.hpp  types.hpp
include/srbd/: srbd.hpp
include/terrain/: terrain_grid.hpp
include/trajopt/ifopt_sets/constraints/common/: acceleration.hpp
include/trajopt/ifopt_sets/constraints/contact_implicit/: foot_body_distance_implicit.hpp  foot_terrain_distance_implicit.hpp  friction_cone_implicit.hpp  implicit_contact.hpp  implicit_velocity.hpp
include/trajopt/ifopt_sets/constraints/phased/: foot_body_distance_phased.hpp  foot_terrain_distance_phased.hpp  friction_cone_phased.hpp  phased_acceleration.hpp
include/trajopt/ifopt_sets/cost/: min_effort.hpp
include/trajopt/ifopt_sets/variables/: phased_trajectory_vars.hpp  trajectory_vars.hpp
include/trajopt/robo_spline/: cubic_hermite_spline.hpp  trajectory.hpp
include/trajopt/srbd/: srbd.hpp
include/utils/: types.hpp  utils.hpp
plotting/: biped_plot.py  biped_step.csv  biped_trot_step.csv  quad_bound_default.csv  quad_plot.py
src/: CMakeLists.txt  main.cpp  trajopt_contact_implicit.cpp  trajopt_phased.cpp
src/examples/: alm_problem.hpp  inverted_pendulum.hpp  trajopt_alm.cpp  trajopt_cem.cpp  trajopt_cem_towr.cpp  trajopt_contact_implicit.cpp  trajopt_di_alm.cpp  trajopt_ipopt.cpp  trajopt_phased.cpp  trajopt_phased_alm.cpp
src/trajopt/: srbd_trajopt.hpp
src/trajopt/alm/: alm.hpp  alm_problem.hpp
src/trajopt/ifopt_sets/constraints/common/: acceleration.cpp  acceleration.hpp  dynamics.hpp  friction_cone.hpp
src/trajopt/ifopt_sets/constraints/contact_implicit/: foot_body_distance_implicit.cpp  foot_body_distance_implicit.hpp  foot_terrain_distance_implicit.cpp  foot_terrain_distance_implicit.hpp  implicit_contact.cpp  implicit_contact.hpp  implicit_velocity.cpp  implicit_velocity.hpp
src/trajopt/ifopt_sets/constraints/phased/: foot_body_distance_phased.cpp  foot_body_distance_phased.hpp  foot_terrain_distance_phased.cpp  foot_terrain_distance_phased.hpp  phased_acceleration.cpp  phased_acceleration.hpp
src/trajopt/ifopt_sets/cost/: min_effort.hpp
src/trajopt/ifopt_sets/variables/: phased_trajectory_vars.hpp  trajectory_vars.hpp
src/trajopt/robo_spline/: component.hpp  cubic_hermite_spline.hpp  phased_trajectory.hpp  trajectory.hpp  types.hpp
src/trajopt/srbd/: srbd.hpp
src/trajopt/terrain/: terrain_grid.cpp  terrain_grid.hpp
src/trajopt/utils/: gait_profiler.hpp  utils.hpp  visualisation.hpp
src/trajopt/utils/test_problems/: create_implicit_nlp.hpp  create_pendulum_nlp.hpp  create_phased_nlp.hpp
test/: CMakeLists.txt  jac_test.cpp  jac_test_phased.cpp  terrain_test.cpp
test/jacobians/: CMakeLists.txt  jac_test_alm.cpp  jac_test_implicit.cpp  jac_test_phased.cpp
test/splines/: CMakeLists.txt  spline_test_phased.cpp  spline_test_regular.cpp
test/terrain/: CMakeLists.txt  test_terrain.cpp
utils/: srbd.hpp  terrain.hpp  types.hpp
